tests/ui/fail/context-type-missing-01.rs
fn main() {}

#[union_fn::union_fn]
trait Foo {
    type Context;

    fn foo(ctx: &mut Self::Context) {}
}
